@@ -45,7 +45,7 @@
 ## used here, as the field name is not a valid Octave identifier because of
 ## the space character.  Using arbitrary strings for field names is
 ## incompatible with @sc{matlab}, and this usage will emit a warning if the
-## warning ID @code{Octave:matlab-incompatible} is enabled.
+## warning ID @code{Octave:language-extension} is enabled.
 ## @xref{XREFwarning_ids}.
 ##
 ## With the second calling form, set a field of a structure array.  The
